# qubit

./: .gitignore  Cargo.toml  README.md  lima.yaml
.github/workflows/: ci.yml
cluster-agent/: Cargo.toml  config.yaml
cluster-agent/proto/: qubit.proto
cluster-agent/src/: main.rs
cluster-agent/src/config/: config.rs  mod.rs
cluster-agent/src/kubernetes/: configmap_handler.rs  controller.rs  crd_types.rs  envoy_parser.rs  event_handler.rs  generic_handler.rs  informer.rs  informer_factory.rs  mod.rs  model.rs  node_informer.rs  pod_handler.rs  service_handler.rs  service_registry.rs
cluster-agent/src/server/: mod.rs
cluster-agent/src/service/: cluster_aggregator.rs  mod.rs
core/: Cargo.toml  build.rs  config.yaml
core/examples/: send_ebpf_event.rs
core/hack/: Makefile
core/hack/clickhouse/: docker-compose.yaml
core/hack/manifests/: configmap.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  pod.yaml  service.yaml
core/proto/: qubit.proto
core/src/: .gitignore  lib.rs  main.rs
core/src/aggregator/: ebpf_aggregator.rs  k8s_aggregator.rs  mod.rs
core/src/config/: config.rs
core/src/dao/: db.rs  mod.rs
core/src/envoy/: envoy.rs  mod.rs
core/src/kubernetes/: configmap_handler.rs  configmap_informer.rs  controller.rs  informer.rs  informer_factory.rs  mod.rs  model.rs  service_handler.rs  service_informer.rs
core/src/model/: error.rs  mod.rs  model.rs
core/src/server/: factory.rs  grpc.rs  handler.rs  http.rs  mod.rs  query.rs  server.rs
core/src/service/: k8s_service.rs  mod.rs
core/src/topology/: topology.rs
ebpf/: Cargo.toml
ebpf-common/: Cargo.toml
ebpf-common/src/: lib.rs
ebpf-loader/: Cargo.toml  config.yaml
ebpf-loader/proto/: qubit.proto
ebpf-loader/src/: main.rs  proto.rs
ebpf-loader/src/config/: config.rs
ebpf-loader/src/loader/: ebpf_loader.rs  mod.rs
ebpf-loader/src/model/: event.rs  mod.rs
ebpf-loader/src/service/: mod.rs  qubit_aggregator.rs
ebpf/hack/: Dockerfile  Dockerfile.cluster-agent  Dockerfile.core  Dockerfile.k8s  Makefile
ebpf/hack/k8s/: cluster-agent.yaml  config.yaml  ebpf-daemonset.yaml  envoy-proxy.yaml  test-pods.yaml
ebpf/src/: main.rs
helm/qubit/: .helmignore  Chart.yaml  values.yaml
helm/qubit/templates/: NOTES.txt  _helpers.tpl
helm/qubit/templates/cluster-agent/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  serviceaccount.yaml
helm/qubit/templates/core/: configmap.yaml  deployment.yaml  service.yaml
helm/qubit/templates/ebpf-loader/: configmap.yaml  daemonset.yaml
load-tests/: Cargo.toml
load-tests/src/: main.rs
mcp-server/: Cargo.toml  build.rs  config.yaml
mcp-server/proto/: qubit.proto
mcp-server/src/: ch_client.rs  config.rs  grpc_client.rs  main.rs  tools.rs
src/kubernetes/: configmap_informer.rs  controller.rs  informer.rs  service_informer.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: ServiceEdge.tsx  ServiceNode.tsx  ServiceTopologyGraph.tsx  TopNav.tsx
ui/src/types/: topology.ts
ui/src/utils/: topologyUtils.ts
ui/src/views/: K8sEventsView.tsx  NetworkEventsView.tsx  TopologyView.tsx
