[package]
name = "cluster-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cluster-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
schemars = "1"
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
