[package]
name = "ebpf-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebpf-loader"
path = "src/main.rs"

[dependencies]
aya = "0.13"
aya-log = "0.2"
ebpf-common = { path = "../ebpf-common", features = ["user"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
bytes = "1"
socket2 = "0.5"
libc = "0.2"
