[package]
name = "ebpf-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebpf-loader"
path = "src/main.rs"

[dependencies]
serde_yaml = "0.9"
aya = "0.13"
aya-log = "0.2"
ebpf-common = { path = "../ebpf-common", features = ["user"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "full"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
bytes = "1"
socket2 = "0.5"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"
