[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1.1"
aya-ebpf-bindings = "0.1.1"
aya-log-ebpf = "0.1.0"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
