[package]
name = "load-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-gen"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.96", features = ["client"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
serde_json = "1"
